Get a working copy where it is still possible to implement client-server multiplayer