@@ -19,13 +19,12 @@ package forge.game.phase;
 
 import com.google.common.collect.ArrayListMultimap;
 import com.google.common.collect.Multimap;
+import com.google.common.collect.Sets;
 
 import forge.card.mana.ManaCost;
 import forge.game.*;
 import forge.game.ability.AbilityFactory;
 import forge.game.card.Card;
-import forge.game.card.CardCollection;
-import forge.game.card.CardCollectionView;
 import forge.game.card.CardFactoryUtil;
 import forge.game.card.CardLists;
 import forge.game.card.CardPredicates.Presets;
@@ -33,16 +32,17 @@ import forge.game.combat.Combat;
 import forge.game.combat.CombatUtil;
 import forge.game.cost.Cost;
 import forge.game.event.*;
+import forge.game.io.GameStateDeserializer;
+import forge.game.io.GameStateSerializer;
+import forge.game.io.IGameStateObject;
 import forge.game.player.Player;
 import forge.game.player.PlayerController.BinaryChoiceType;
 import forge.game.player.PlayerController.ManaPaymentPurpose;
 import forge.game.spellability.SpellAbility;
 import forge.game.staticability.StaticAbility;
-import forge.game.trigger.Trigger;
 import forge.game.trigger.TriggerType;
 import forge.game.zone.ZoneType;
 import forge.util.CollectionSuppliers;
-import forge.util.FCollectionView;
 import forge.util.maps.HashMapOfLists;
 import forge.util.maps.MapOfLists;
 
@@ -59,12 +59,15 @@ import java.util.*;
  * @author Forge
  * @version $Id: PhaseHandler.java 13001 2012-01-08 12:25:25Z Sloth $
  */
-public class PhaseHandler implements java.io.Serializable {
+public class PhaseHandler implements java.io.Serializable, IGameStateObject {
+
+    /** Constant <code>serialVersionUID=5207222278370963197L</code>. */
     private static final long serialVersionUID = 5207222278370963197L;
 
     // Start turn at 0, since we start even before first untap
     private PhaseType phase = null;
     private int turn = 0;
+
 
     private final transient Stack<ExtraTurn> extraTurns = new Stack<ExtraTurn>();
     private final transient Map<PhaseType, Stack<PhaseType>> extraPhases = new HashMap<PhaseType, Stack<PhaseType>>();
@@ -93,70 +96,97 @@ public class PhaseHandler implements java.io.Serializable {
     private final transient Game game;
 
     public PhaseHandler(final Game game0) {
+
         game = game0;
     }
 
-    public final PhaseType getPhase() {
-        return phase;
-    }
-    private final void setPhase(final PhaseType phase0) {
-        if (phase == phase0) { return; }
-        phase = phase0;
-        game.updatePhaseForView();
-    }
-
-    public final int getTurn() {
-        return turn;
-    }
 
     public final boolean isPlayerTurn(final Player player) {
-        return player.equals(playerTurn);
+        return player.equals(this.playerTurn);
     }
 
+    private final void setPlayerTurn(final Player s) {
+        this.playerTurn = s;
+        this.setPriority(s);
+    }
+
+    /**
+     * <p>
+     * Getter for the field <code>playerTurn</code>.
+     * </p>
+     * 
+     * @return a {@link forge.game.player.Player} object.
+     */
     public final Player getPlayerTurn() {
-        return playerTurn;
-    }
-    private final void setPlayerTurn(final Player playerTurn0) {
-        if (playerTurn == playerTurn0) { return; }
-        playerTurn = playerTurn0;
-        game.updatePlayerTurnForView();
-        setPriority(playerTurn);
+        return this.playerTurn;
     }
 
+    // priority player
+
+    /**
+     * <p>
+     * getPriorityPlayer.
+     * </p>
+     * 
+     * @return a {@link forge.game.player.Player} object.
+     */
     public final Player getPriorityPlayer() {
-        return pPlayerPriority;
-    }
-    public final void setPriority(final Player p) {
-        pFirstPriority = p;
-        pPlayerPriority = p;
-    }
-    public final void resetPriority() {
-        setPriority(playerTurn);
+        return this.pPlayerPriority;
     }
 
+
+    /**
+     * <p>
+     * setPriority.
+     * </p>
+     * 
+     * @param p
+     *            a {@link forge.game.player.Player} object.
+     */
+    public final void setPriority(final Player p) {
+        this.pFirstPriority = p;
+        this.pPlayerPriority = p;
+    }
+
+    /**
+     * <p>
+     * resetPriority.
+     * </p>
+     */
+    public final void resetPriority() {
+        this.setPriority(this.playerTurn);
+    }
+
+    /**
+     * <p>
+     * inCombat.
+     * </p>
+     * 
+     * @return a boolean.
+     */
     public final boolean inCombat() { return combat != null; }
-    public final Combat getCombat() { return combat; }
+    public final Combat getCombat() { return this.combat; }
 
     private void advanceToNextPhase() {
         PhaseType oldPhase = phase;
 
-        if (bRepeatCleanup) { // for when Cleanup needs to repeat itself
-            bRepeatCleanup = false;
+        if (this.bRepeatCleanup) { // for when Cleanup needs to repeat itself
+            this.bRepeatCleanup = false;
         }
         else {
             // If the phase that's ending has a stack of additional phases
             // Take the LIFO one and move to that instead of the normal one
-            if (extraPhases.containsKey(phase)) {
-                PhaseType nextPhase = extraPhases.get(phase).pop();
+            if (this.extraPhases.containsKey(phase)) {
+                PhaseType nextPhase = this.extraPhases.get(phase).pop();
                 // If no more additional phases are available, remove it from the map
                 // and let the next add, reput the key
-                if (extraPhases.get(phase).isEmpty()) {
-                    extraPhases.remove(phase);
+                if (this.extraPhases.get(phase).isEmpty()) {
+                    this.extraPhases.remove(phase);
                 }
-                setPhase(nextPhase);
+                this.phase = nextPhase;
             }
             else {
-                setPhase(PhaseType.getNext(phase));
+                this.phase = PhaseType.getNext(phase);
             }
         }
 
@@ -164,13 +194,12 @@ public class PhaseHandler implements java.io.Serializable {
 
         String phaseType = oldPhase == phase ? "Repeat" : phase == PhaseType.getNext(oldPhase) ? "" : "Additional";
 
-        if (phase == PhaseType.UNTAP) {
-            turn++;
-            game.updateTurnForView();
+        if (this.phase == PhaseType.UNTAP) {
+            this.turn++;
             game.fireEvent(new GameEventTurnBegan(playerTurn, turn));
 
             // Tokens starting game in play should suffer from Sum. Sickness
-            final CardCollectionView list = playerTurn.getCardsIncludePhasingIn(ZoneType.Battlefield);
+            final List<Card> list = playerTurn.getCardsIncludePhasingIn(ZoneType.Battlefield);
             for (final Card c : list) {
                 if (playerTurn.getTurn() > 0 || !c.isStartsGameInPlay()) {
                     c.setSickness(false);
@@ -184,12 +213,12 @@ public class PhaseHandler implements java.io.Serializable {
             playerTurn.setNumPowerSurgeLands(lands.size());
         }
 
-        game.fireEvent(new GameEventTurnPhase(playerTurn, phase, phaseType));
+        game.fireEvent(new GameEventTurnPhase(this.getPlayerTurn(), this.getPhase(), phaseType));
     }
 
-    private boolean isSkippingPhase(final PhaseType phase) {
+    private boolean isSkippingPhase(PhaseType phase) {
         // TODO: Refactor this method to replacement effect
-        switch (phase) {
+        switch(phase) {
             case UNTAP:
                 if (playerTurn.hasKeyword("Skip your next untap step.")) {
                     playerTurn.removeKeyword("Skip your next untap step.");
@@ -198,14 +227,10 @@ public class PhaseHandler implements java.io.Serializable {
                 return playerTurn.hasKeyword("Skip the untap step of this turn.") || playerTurn.hasKeyword("Skip your untap step.");
 
             case UPKEEP:
-                return playerTurn.hasKeyword("Skip your upkeep step.");
+                return getPlayerTurn().hasKeyword("Skip your upkeep step.");
 
             case DRAW:
-                return playerTurn.isSkippingDraw() || turn == 1 && game.getPlayers().size() == 2;
-
-            case MAIN1:
-            case MAIN2:
-                return playerTurn.isSkippingMain();
+                return getPlayerTurn().isSkippingDraw() || getTurn() == 1 && game.getPlayers().size() == 2;
 
             case COMBAT_BEGIN:
             case COMBAT_DECLARE_ATTACKERS:
@@ -214,7 +239,7 @@ public class PhaseHandler implements java.io.Serializable {
             case COMBAT_DECLARE_BLOCKERS:
             case COMBAT_FIRST_STRIKE_DAMAGE:
             case COMBAT_DAMAGE:
-                return !inCombat();
+                return !this.inCombat();
 
             default:
                 return false;
@@ -234,7 +259,7 @@ public class PhaseHandler implements java.io.Serializable {
         }
         else  {
             // Perform turn-based actions
-            switch (phase) {
+            switch(this.getPhase()) {
                 case UNTAP:
                     givePriorityToPlayer = false;
                     game.getUntap().executeUntil(playerTurn);
@@ -242,19 +267,19 @@ public class PhaseHandler implements java.io.Serializable {
                     break;
 
                 case UPKEEP:
-                    nUpkeepsThisTurn++;
-                    nUpkeepsThisGame++;
-                    game.getUpkeep().executeUntil(playerTurn);
+                    this.nUpkeepsThisTurn++;
+                    this.nUpkeepsThisGame++;
+                    game.getUpkeep().executeUntil(this.getPlayerTurn());
                     game.getUpkeep().executeAt();
                     break;
 
                 case DRAW:
-                    playerTurn.drawCard();
+                    this.getPlayerTurn().drawCard();
                     break;
 
                 case MAIN1:
-                    if (playerTurn.isArchenemy() && isPreCombatMain()) {
-                        playerTurn.setSchemeInMotion();
+                    if (this.getPlayerTurn().isArchenemy() && this.isPreCombatMain()) {
+                        this.getPlayerTurn().setSchemeInMotion();
                     }
                     break;
 
@@ -271,7 +296,7 @@ public class PhaseHandler implements java.io.Serializable {
 
                         if (combat != null && combat.getAttackers().isEmpty()
                                 && !game.getTriggerHandler().hasDelayedTriggers()) {
-                            endCombat();
+                            combat = null;
                         }
                     }
 
@@ -286,13 +311,11 @@ public class PhaseHandler implements java.io.Serializable {
                     break;
 
                 case COMBAT_FIRST_STRIKE_DAMAGE:
-                    if (combat.removeAbsentCombatants()) {
-                        game.updateCombatForView();
-                    }
+                    combat.removeAbsentCombatants();
 
                     // no first strikers, skip this step
                     if (!combat.assignCombatDamage(true)) {
-                        givePriorityToPlayer = false;
+                        this.givePriorityToPlayer = false;
                     }
                     else {
                         combat.dealAssignedDamage();
@@ -300,12 +323,10 @@ public class PhaseHandler implements java.io.Serializable {
                     break;
 
                 case COMBAT_DAMAGE:
-                    if (combat.removeAbsentCombatants()) {
-                        game.updateCombatForView();
-                    }
+                    combat.removeAbsentCombatants();
 
                     if (!combat.assignCombatDamage(false)) {
-                        givePriorityToPlayer = false;
+                        this.givePriorityToPlayer = false;
                     }
                     else {
                         combat.dealAssignedDamage();
@@ -356,9 +377,9 @@ public class PhaseHandler implements java.io.Serializable {
                         player.onCleanupPhase();
                         player.getController().autoPassCancel(); // autopass won't wrap to next turn
                     }
-                    playerTurn.removeKeyword("Skip all combat phases of this turn.");
-                    game.getCleanup().executeUntil(getNextTurn());
-                    nUpkeepsThisTurn = 0;
+                    this.getPlayerTurn().removeKeyword("Skip all combat phases of this turn.");
+                    game.getCleanup().executeUntil(this.getNextTurn());
+                    this.nUpkeepsThisTurn = 0;
 
                     // Rule 514.3
                     givePriorityToPlayer = false;
@@ -375,8 +396,8 @@ public class PhaseHandler implements java.io.Serializable {
         if (!skipped) {
             // Run triggers if phase isn't being skipped
             final HashMap<String, Object> runParams = new HashMap<String, Object>();
-            runParams.put("Phase", phase.nameForScripts);
-            runParams.put("Player", playerTurn);
+            runParams.put("Phase", this.getPhase().nameForScripts);
+            runParams.put("Player", this.getPlayerTurn());
             game.getTriggerHandler().runTrigger(TriggerType.Phase, runParams, false);
         }
 
@@ -389,6 +410,7 @@ public class PhaseHandler implements java.io.Serializable {
             givePriorityToPlayer = true;
         }
     }
+
 
     private void onPhaseEnd() {
         // If the Stack isn't empty why is nextPhase being called?
@@ -409,19 +431,19 @@ public class PhaseHandler implements java.io.Serializable {
             }
         }
 
-        switch (phase) {
+        switch (this.phase) {
             case UNTAP:
-                nCombatsThisTurn = 0;
+                this.nCombatsThisTurn = 0;
                 break;
 
             case UPKEEP:
                 for (Card c : game.getCardsIn(ZoneType.Battlefield)) {
-                    c.getDamageHistory().setNotAttackedSinceLastUpkeepOf(playerTurn);
-                    c.getDamageHistory().setNotBlockedSinceLastUpkeepOf(playerTurn);
-                    c.getDamageHistory().setNotBeenBlockedSinceLastUpkeepOf(playerTurn);
+                    c.getDamageHistory().setNotAttackedSinceLastUpkeepOf(this.getPlayerTurn());
+                    c.getDamageHistory().setNotBlockedSinceLastUpkeepOf(this.getPlayerTurn());
+                    c.getDamageHistory().setNotBeenBlockedSinceLastUpkeepOf(this.getPlayerTurn());
                 }
-                game.getUpkeep().executeUntilEndOfPhase(playerTurn);
-                game.getUpkeep().registerUntilEndCommand(playerTurn);
+                game.getUpkeep().executeUntilEndOfPhase(this.getPlayerTurn());
+                game.getUpkeep().registerUntilEndCommand(this.getPlayerTurn());
                 break;
 
             case COMBAT_END:
@@ -431,8 +453,8 @@ public class PhaseHandler implements java.io.Serializable {
                     List<Card> blockers = combat.getAllBlockers();
                     eventEndCombat = new GameEventCombatEnded(attackers, blockers);
                 }
-                endCombat();
-                playerTurn.resetAttackedThisCombat();
+                combat = null;
+                this.getPlayerTurn().resetAttackedThisCombat();
 
                 if (eventEndCombat != null) {
                     game.fireEvent(eventEndCombat);
@@ -440,11 +462,11 @@ public class PhaseHandler implements java.io.Serializable {
                 break;
 
             case CLEANUP:
-                bPreventCombatDamageThisTurn = false;
-                if (!bRepeatCleanup) {
-                    setPlayerTurn(handleNextTurn());
+                this.bPreventCombatDamageThisTurn = false;
+                if (!this.bRepeatCleanup) {
+                    this.setPlayerTurn(this.handleNextTurn());
                 }
-                planarDiceRolledthisTurn = 0;
+                this.planarDiceRolledthisTurn = 0;
                 // Play the End Turn sound
                 game.fireEvent(new GameEventTurnEnded());
                 break;
@@ -453,57 +475,33 @@ public class PhaseHandler implements java.io.Serializable {
     }
 
     private void declareAttackersTurnBasedAction() {
-        final Player whoDeclares = playerDeclaresAttackers == null || playerDeclaresAttackers.hasLost()
-                ? playerTurn
-                : playerDeclaresAttackers;
+        Player whoDeclares = playerDeclaresAttackers == null || playerDeclaresAttackers.hasLost() ? playerTurn : playerDeclaresAttackers;
 
         if (CombatUtil.canAttack(playerTurn)) {
-            boolean success = false;
-            do {
-                if (game.isGameOver()) { // they just like to close window at any moment
-                    return;
-                }
-
-                whoDeclares.getController().declareAttackers(playerTurn, combat);
-                combat.removeAbsentCombatants();
-
-                success = CombatUtil.validateAttackers(combat);
-                if (!success) {
-                    whoDeclares.getController().notifyOfValue(null, null, "Attack declaration invalid");
-                    continue;
-                }
-
-                for (final Card attacker : combat.getAttackers()) {
-                    final boolean shouldTapForAttack = !attacker.hasKeyword("Vigilance") && !attacker.hasKeyword("Attacking doesn't cause CARDNAME to tap.");
-                    if (shouldTapForAttack) {
-                        // set tapped to true without firing triggers because it may affect propaganda costs
-                        attacker.setTapped(true);
-                    }
-
-                    final boolean canAttack = CombatUtil.checkPropagandaEffects(game, attacker, combat);
-                    attacker.setTapped(false);
-
-                    if (canAttack) {
-                        if (shouldTapForAttack) {
-                            attacker.tap();
-                        }
-                    } else {
-                        combat.removeFromCombat(attacker);
-                        success = CombatUtil.validateAttackers(combat);
-                        if (!success) {
-                            break;
-                        }
-                    }
-                }
-
-            } while (!success);
+            whoDeclares.getController().declareAttackers(playerTurn, combat);
         }
 
         if (game.isGameOver()) { // they just like to close window at any moment
             return;
         }
 
-        nCombatsThisTurn++;
+        combat.removeAbsentCombatants();
+        CombatUtil.checkAttackOrBlockAlone(combat);
+
+        // TODO move propaganda to happen as the Attacker is Declared
+        for (final Card c2 : combat.getAttackers()) {
+            boolean canAttack = CombatUtil.checkPropagandaEffects(game, c2, combat);
+            if (canAttack) {
+                if (!c2.hasKeyword("Vigilance") && !c2.hasKeyword("Attacking doesn't cause CARDNAME to tap.")) {
+                    c2.tap();
+                }
+            }
+            else {
+                combat.removeFromCombat(c2);
+            }
+        }
+
+        this.nCombatsThisTurn++;
 
         // Prepare and fire event 'attackers declared'
         Multimap<GameEntity, Card> attackersMap = ArrayListMultimap.create();
@@ -517,10 +515,10 @@ public class PhaseHandler implements java.io.Serializable {
             final Player attackingPlayer = combat.getAttackingPlayer();
             final Card attacker = combat.getAttackers().get(0);
             for (Card card : attackingPlayer.getCardsIn(ZoneType.Battlefield)) {
-                int exaltedMagnitude = card.getAmountOfKeyword("Exalted");
+                int exaltedMagnitude = card.getKeywordAmount("Exalted");
 
                 for (int i = 0; i < exaltedMagnitude; i++) {
-                    String abScript = String.format("AB$ Pump | Cost$ 0 | Defined$ CardUID_%d | NumAtt$ +1 | NumDef$ +1 | StackDescription$ Exalted for attacker {c:CardUID_%d} (Whenever a creature you control attacks alone, that creature gets +1/+1 until end of turn).", attacker.getId(), attacker.getId());
+                    String abScript = String.format("AB$ Pump | Cost$ 0 | Defined$ CardUID_%d | NumAtt$ +1 | NumDef$ +1 | StackDescription$ Exalted for attacker {c:CardUID_%d} (Whenever a creature you control attacks alone, that creature gets +1/+1 until end of turn).", attacker.getUniqueNumber(), attacker.getUniqueNumber());
                     SpellAbility ability = AbilityFactory.getAbility(abScript, card);
                     ability.setActivatingPlayer(card.getController());
                     ability.setDescription(ability.getStackDescription());
@@ -549,9 +547,10 @@ public class PhaseHandler implements java.io.Serializable {
         }
 
         game.getTriggerHandler().resetActiveTriggers();
-        game.updateCombatForView();
+
         game.fireEvent(new GameEventCombatChanged());
     }
+
 
     private void declareBlockersTurnBasedAction() {
         Player p = playerTurn;
@@ -692,9 +691,9 @@ public class PhaseHandler implements java.io.Serializable {
             a.getDamageHistory().setCreatureGotBlockedThisCombat(true);
         }
 
-        game.updateCombatForView();
         game.fireEvent(new GameEventCombatChanged());
     }
+
 
     private static boolean payRequiredBlockCosts(Game game, Card blocker, Card attacker) {
         Cost blockCost = new Cost(ManaCost.ZERO, true);
@@ -702,7 +701,7 @@ public class PhaseHandler implements java.io.Serializable {
         boolean noCost = true;
         List<ZoneType> checkZones = ZoneType.listValueOf("Battlefield,Command");
         for (Card card : game.getCardsIn(checkZones)) {
-            final FCollectionView<StaticAbility> staticAbilities = card.getStaticAbilities();
+            final ArrayList<StaticAbility> staticAbilities = card.getStaticAbilities();
             for (final StaticAbility stAb : staticAbilities) {
                 Cost c1 = stAb.getBlockCost(blocker, attacker);
                 if (c1 != null) {
@@ -715,14 +714,25 @@ public class PhaseHandler implements java.io.Serializable {
         return noCost || blocker.getController().getController().payManaOptional(blocker, blockCost, fakeSA, "Pay cost to declare " + blocker + " a blocker. ", ManaPaymentPurpose.DeclareBlocker);
     }
 
+    /**
+     * Checks if is prevent combat damage this turn.
+     * 
+     * @return true, if is prevent combat damage this turn
+     */
     public final boolean isPreventCombatDamageThisTurn() {
-        return bPreventCombatDamageThisTurn;
+        return this.bPreventCombatDamageThisTurn;
     }
 
+    /**
+     * <p>
+     * handleNextTurn.
+     * </p>
+     * 
+     * @return a {@link forge.game.player.Player} object.
+     */
     private Player handleNextTurn() {
+
         game.getStack().onNextTurn();
-        // reset mustAttackEntity
-        playerTurn.setMustAttackEntity(null);
 
         for (final Player p1 : game.getPlayers()) {
             for (final ZoneType z : Player.ALL_ZONES) {
@@ -738,11 +748,10 @@ public class PhaseHandler implements java.io.Serializable {
             p.setLibrarySearched(0);
             p.setNumManaConversion(0);
 
+            p.removeKeyword("At the beginning of this turn's end step, you lose the game.");
             p.removeKeyword("Skip the untap step of this turn.");
             p.removeKeyword("Schemes can't be set in motion this turn.");
         }
-
-        game.getTriggerHandler().clearThisTurnDelayedTrigger();
 
         Player next = getNextActivePlayer();
 
@@ -756,39 +765,42 @@ public class PhaseHandler implements java.io.Serializable {
                 }
             }
         }
+
         return next;
     }
 
+    /**
+     * <p>
+     * getNextActivePlayer.
+     * </p>
+     * 
+     * @return a {@link forge.game.player.Player} object.
+     */
     private Player getNextActivePlayer() {
-        ExtraTurn extraTurn = !extraTurns.isEmpty() ? extraTurns.pop() : null;
-        Player nextPlayer = extraTurn != null ? extraTurn.getPlayer() : game.getNextPlayerAfter(playerTurn);
+
+        ExtraTurn extraTurn = !this.extraTurns.isEmpty() ? this.extraTurns.pop() : null;
+        Player nextPlayer = extraTurn != null ? extraTurn.getPlayer() : game.getNextPlayerAfter(this.getPlayerTurn());
         
         if (extraTurn != null) {
             // The bottom of the extra turn stack is the normal turn
-            nextPlayer.setExtraTurn(!extraTurns.isEmpty());
+            nextPlayer.setExtraTurn(!this.extraTurns.isEmpty());
             if (nextPlayer.hasKeyword("If you would begin an extra turn, skip that turn instead.")) {
                 return getNextActivePlayer();
             }
-            for (Trigger deltrig : extraTurn.getDelayedTriggers()) {
-                game.getTriggerHandler().registerThisTurnDelayedTrigger(deltrig);
-            }
-        }
-        else {
+        } else
             nextPlayer.setExtraTurn(false);
-        }
-
+        
         if (nextPlayer.hasKeyword("Skip your next turn.")) {
             nextPlayer.removeKeyword("Skip your next turn.");
-            if (extraTurn == null) { 
-                setPlayerTurn(nextPlayer);
-            }
+            if( null == extraTurn ) 
+                this.setPlayerTurn(nextPlayer);
             return getNextActivePlayer();
         }
 
         // TODO: This shouldn't filter by Time Vault, just in case Time Vault doesn't have it's normal ability.
-        CardCollection vaults = CardLists.filter(nextPlayer.getCardsIn(ZoneType.Battlefield, "Time Vault"), Presets.TAPPED);
-        if (!vaults.isEmpty()) {
-            Card crd = vaults.getFirst();
+        List<Card> vaults = CardLists.filter(nextPlayer.getCardsIn(ZoneType.Battlefield, "Time Vault"), Presets.TAPPED);
+        if(!vaults.isEmpty()) {
+            Card crd = vaults.get(0);
             SpellAbility fakeSA = new SpellAbility.EmptySa(crd, nextPlayer);
             boolean untapTimeVault = nextPlayer.getController().chooseBinary(fakeSA, "Skip a turn to untap a Time Vault?", BinaryChoiceType.UntapTimeVault, false);
             if (untapTimeVault) {
@@ -798,14 +810,16 @@ public class PhaseHandler implements java.io.Serializable {
                         crd = c;
                 }
                 crd.untap();
-                if (extraTurn == null) {
-                    setPlayerTurn(nextPlayer);
-                }
+                if( null == extraTurn ) 
+                    this.setPlayerTurn(nextPlayer);
                 return getNextActivePlayer();
             }
         }
         
         if (extraTurn != null) {
+            if (extraTurn.isLoseAtEndStep()) {
+                nextPlayer.addKeyword("At the beginning of this turn's end step, you lose the game.");
+            }
             if (extraTurn.isSkipUntap()) {
                 nextPlayer.addKeyword("Skip the untap step of this turn.");
             }
@@ -813,55 +827,152 @@ public class PhaseHandler implements java.io.Serializable {
                 nextPlayer.addKeyword("Schemes can't be set in motion this turn.");
             }
         }
+ 
         return nextPlayer;
     }
 
-    public final synchronized boolean is(final PhaseType phase0, final Player player0) {
-        return phase == phase0 && playerTurn.equals(player0);
+    /**
+     * <p>
+     * is.
+     * </p>
+     * 
+     * @param phase
+     *            a {@link java.lang.String} object.
+     * @param player
+     *            a {@link forge.game.player.Player} object.
+     * @return a boolean.
+     */
+    public final synchronized boolean is(final PhaseType phase, final Player player) {
+        return this.getPhase() == phase && this.getPlayerTurn().equals(player);
     }
+
+    /**
+     * <p>
+     * is.
+     * </p>
+     *
+     * @param phase0
+     *            a {@link forge.game.phase.PhaseType} object.
+     * @return a boolean.
+     */
     public final synchronized boolean is(final PhaseType phase0) {
-        return phase == phase0;
+        return this.getPhase() == phase0;
     }
 
+    /**
+     * <p>
+     * getPhase.
+     * </p>
+     * 
+     * @return a {@link java.lang.String} object.
+     */
+    public final PhaseType getPhase() {
+        return phase;
+    }
+
+    /**
+     * <p>
+     * Getter for the field <code>turn</code>.
+     * </p>
+     * 
+     * @return a int.
+     */
+    public final int getTurn() {
+        return this.turn;
+    }
+
+    /**
+     * <p>
+     * getNextTurn.
+     * </p>
+     * 
+     * @return a {@link forge.game.player.Player} object.
+     */
     public final Player getNextTurn() {
-        if (extraTurns.isEmpty()) {
-            return game.getNextPlayerAfter(playerTurn);
+        if (this.extraTurns.isEmpty()) {
+            return game.getNextPlayerAfter(this.getPlayerTurn());
         }
-        return extraTurns.peek().getPlayer();
+
+        return this.extraTurns.peek().getPlayer();
     }
 
+
+    /**
+     * <p>
+     * addExtraTurn.
+     * </p>
+     * 
+     * @param player
+     *            a {@link forge.game.player.Player} object.
+     */
     public final ExtraTurn addExtraTurn(final Player player) {
         // use a stack to handle extra turns, make sure the bottom of the stack
         // restores original turn order
-        if (extraTurns.isEmpty()) {
-            extraTurns.push(new ExtraTurn(game.getNextPlayerAfter(playerTurn)));
+        if (this.extraTurns.isEmpty()) {
+            this.extraTurns.push(new ExtraTurn(game.getNextPlayerAfter(this.getPlayerTurn())));
         }
-        return extraTurns.push(new ExtraTurn(player));
+
+        return this.extraTurns.push(new ExtraTurn(player));
     }
 
+    /**
+     * <p>
+     * addExtraPhase.
+     * </p>
+     * 
+     */
     public final void addExtraPhase(final PhaseType afterPhase, final PhaseType extraPhase) {
         // 500.8. Some effects can add phases to a turn. They do this by adding the phases directly after the specified phase.
         // If multiple extra phases are created after the same phase, the most recently created phase will occur first.
-        if (!extraPhases.containsKey(afterPhase)) {
-            extraPhases.put(afterPhase, new Stack<PhaseType>());
+        if (!this.extraPhases.containsKey(afterPhase)) {
+            this.extraPhases.put(afterPhase, new Stack<PhaseType>());
         }
-        extraPhases.get(afterPhase).push(extraPhase);
+
+        this.extraPhases.get(afterPhase).push(extraPhase);
     }
 
+    /**
+     * <p>
+     * isFirstCombat.
+     * </p>
+     * 
+     * @return a boolean.
+     */
     public final boolean isFirstCombat() {
-        return (nCombatsThisTurn == 1);
+        return (this.nCombatsThisTurn == 1);
     }
 
+    /**
+     * <p>
+     * isFirstUpkeep.
+     * </p>
+     * 
+     * @return a boolean.
+     */
     public final boolean isFirstUpkeep() {
-        return (nUpkeepsThisTurn == 0);
+        return (this.nUpkeepsThisTurn == 0);
     }
 
+    /**
+     * <p>
+     * isFirstUpkeepThisGame.
+     * </p>
+     * 
+     * @return a boolean.
+     */
     public final boolean isFirstUpkeepThisGame() {
-        return (nUpkeepsThisGame == 0);
+        return (this.nUpkeepsThisGame == 0);
     }
 
+    /**
+     * <p>
+     * isPreCombatMain.
+     * </p>
+     * 
+     * @return a boolean.
+     */
     public final boolean isPreCombatMain() {
-        return (nCombatsThisTurn == 0);
+        return (this.nCombatsThisTurn == 0);
     }
 
     private final static boolean DEBUG_PHASES = false;
@@ -880,54 +991,51 @@ public class PhaseHandler implements java.io.Serializable {
         // don't even offer priority, because it's untap of 1st turn now
         givePriorityToPlayer = false;
 
-        final Set<Card> allAffectedCards = new HashSet<Card>();
-
         // MAIN GAME LOOP
         while (!game.isGameOver()) {
+            
             if (givePriorityToPlayer) {
                 if (DEBUG_PHASES) {
                     sw.start();
                 }
 
-                game.fireEvent(new GameEventPlayerPriority(playerTurn, phase, getPriorityPlayer()));
-                List<SpellAbility> chosenSa = null;
+                game.fireEvent(new GameEventPlayerPriority(getPlayerTurn(), getPhase(), getPriorityPlayer()));
+                SpellAbility chosenSa = null;
 
                 int loopCount = 0;
                 do {
-                    do {
+                    final Set<Card> allAffectedCards = Sets.newHashSet();
+                    boolean addedAnythingToStack = false;
+                    do { 
                         // Rule 704.3  Whenever a player would get priority, the game checks ... for state-based actions,
-                        game.getAction().checkStateEffects(false, allAffectedCards);
-                        if (game.isGameOver()) {
+                        allAffectedCards.addAll(game.getAction().checkStateEffects(false));
+                        if (game.isGameOver())
                             return; // state-based effects check could lead to game over
-                        }
-                    } while (game.getStack().addAllTriggeredAbilitiesToStack()); //loop so long as something was added to stack
+    
+                        addedAnythingToStack = game.getStack().addAllTriggeredAbilitiesToStack();
+                    } while(addedAnythingToStack);
 
-                    if (!allAffectedCards.isEmpty()) {
-                        game.fireEvent(new GameEventCardStatsChanged(allAffectedCards));
-                        allAffectedCards.clear();
-                    }
+                    game.fireEvent(new GameEventCardStatsChanged(allAffectedCards));
 
                     if (playerTurn.hasLost() && pPlayerPriority.equals(playerTurn) && pFirstPriority.equals(playerTurn)) {
                         // If the active player has lost, and they have priority, set the next player to have priority
                         System.out.println("Active player is no longer in the game...");
-                        pPlayerPriority = game.getNextPlayerAfter(getPriorityPlayer());
+                        pPlayerPriority = game.getNextPlayerAfter(this.getPriorityPlayer());
                         pFirstPriority = pPlayerPriority;
                     }
 
                     chosenSa = pPlayerPriority.getController().chooseSpellAbilityToPlay();
-                    if (chosenSa == null) {
+                    if( null == chosenSa )
                         break; // that means 'I pass'
-                    }
-                    if (DEBUG_PHASES) {
+
+                    if (DEBUG_PHASES)
                         System.out.print("... " + pPlayerPriority + " plays " + chosenSa);
-                    }
+
                     pFirstPriority = pPlayerPriority; // all opponents have to pass before stack is allowed to resolve
-                    for (SpellAbility sa : chosenSa) {
-                        pPlayerPriority.getController().playChosenSpellAbility(sa);
-                    }
+                    pPlayerPriority.getController().playChosenSpellAbility(chosenSa);
                     loopCount++;
                 } while (chosenSa != null && (loopCount < 999 || !pPlayerPriority.getController().isAI()));
-
+                
                 if (loopCount >= 999 && pPlayerPriority.getController().isAI()) {
                 	System.out.print("AI looped too much with: " + chosenSa);
                 }
@@ -940,47 +1048,42 @@ public class PhaseHandler implements java.io.Serializable {
                 }
             }
             else if (DEBUG_PHASES){
-                System.out.print(" >> (no priority given to " + getPriorityPlayer() + ")\n");
+                System.out.print(" >> (no priority given to " + this.getPriorityPlayer() + ")\n");
             }
 
             // actingPlayer is the player who may act
             // the firstAction is the player who gained Priority First in this segment
             // of Priority
-            Player nextPlayer = game.getNextPlayerAfter(getPriorityPlayer());
+            Player nextPlayer = game.getNextPlayerAfter(this.getPriorityPlayer());
 
             if (game.isGameOver() || nextPlayer == null) { return; } // conceded?
 
-            if (DEBUG_PHASES) {
+            if( DEBUG_PHASES )
                 System.out.println(String.format("%s %s: %s is active, previous was %s", playerTurn, phase, pPlayerPriority, nextPlayer));
-            }
             if (pFirstPriority == nextPlayer) {
                 if (game.getStack().isEmpty()) {
                     if (playerTurn.hasLost()) {
-                        setPriority(game.getNextPlayerAfter(playerTurn));
-                    }
-                    else {
-                        setPriority(playerTurn);
+                        this.setPriority(game.getNextPlayerAfter(playerTurn));
+                    } else {
+                        this.setPriority(playerTurn);
                     }
 
                     // end phase
-                    givePriorityToPlayer = true;
+                    this.givePriorityToPlayer = true;
                     onPhaseEnd();
                     advanceToNextPhase();
                     onPhaseBegin();
-                }
-                else if (!game.getStack().hasSimultaneousStackEntries()) {
+                } else if (!game.getStack().hasSimultaneousStackEntries())
                     game.getStack().resolveStack();
-                }
             }
             else {
                 // pass the priority to other player
-                pPlayerPriority = nextPlayer;
+                this.pPlayerPriority = nextPlayer;
             }
 
             // If ever the karn's ultimate resolved
             if (game.getAge() == GameStage.RestartedByKarn) {
-                setPhase(null);
-                game.updatePhaseForView();
+                phase = null;
                 game.fireEvent(new GameEventGameRestarted(playerTurn));
                 return;
             }
@@ -990,57 +1093,70 @@ public class PhaseHandler implements java.io.Serializable {
     // this is a hack for the setup game state mode, do not use outside of devSetupGameState code
     // as it avoids calling any of the phase effects that may be necessary in a less enforced context
     public final void devModeSet(final PhaseType phase0, final Player player0) {
-        if (phase0 != null) {
-            setPhase(phase0);
-        }
-        if (player0 != null) {
+        if (null != phase0) this.phase = phase0;
+        if (null != player0) {
             setPlayerTurn(player0);
         }
 
-        game.fireEvent(new GameEventTurnPhase(playerTurn, phase, ""));
-        endCombat(); // not-null can be created only when declare attackers phase begins
+        game.fireEvent(new GameEventTurnPhase(this.getPlayerTurn(), this.getPhase(), ""));
+        combat = null; // not-null can be created only when declare attackers phase begins
     }
 
     public final void endTurnByEffect() {
-        endCombat();
-        extraPhases.clear();
-        setPhase(PhaseType.CLEANUP);
-        onPhaseBegin();
+        this.combat = null;
+        this.extraPhases.clear();
+        this.phase = PhaseType.CLEANUP;
+        this.onPhaseBegin();
     }
 
-    public final void setPreventCombatDamageThisTurn() {
-        bPreventCombatDamageThisTurn = true;
+
+    public final void setPreventCombatDamageThisTurn(final boolean b) {
+        this.bPreventCombatDamageThisTurn = true;
     }
 
+    /**
+     * @return the planarDiceRolledthisTurn
+     */
     public int getPlanarDiceRolledthisTurn() {
         return planarDiceRolledthisTurn;
     }
+
     public void incPlanarDiceRolledthisTurn() {
-        planarDiceRolledthisTurn++;
+        this.planarDiceRolledthisTurn++;
     }
 
     public String debugPrintState(boolean hasPriority) {
-        return String.format("%s's %s [%sP] %s", playerTurn, phase.nameForUi, hasPriority ? "+" : "-", getPriorityPlayer());
+        return String.format("%s's %s [%sP] %s", getPlayerTurn(), getPhase().nameForUi, hasPriority ? "+" : "-", getPriorityPlayer());
     }
 
-    // just to avoid exposing variable to outer classes
+    // just to avoid exposing variable to oute classes
     public void onStackResolved() {
         givePriorityToPlayer = true;
     }
 
-    public final void setPlayerDeclaresAttackers(Player player) {
-        playerDeclaresAttackers = player;
+    public final void setPlayerDeclaresBlockers(Player player) {
+        this.playerDeclaresBlockers = player;
     }
 
-    public final void setPlayerDeclaresBlockers(Player player) {
-        playerDeclaresBlockers = player;
+    public final void setPlayerDeclaresAttackers(Player player) {
+        this.playerDeclaresAttackers = player;
     }
 
     public void endCombat() {
-        if (combat != null) {
-            combat.endCombat();
-            combat = null;
-        }
-        game.updateCombatForView();
+        combat = null;
+    }
+
+
+    @Override
+    public void loadState(GameStateDeserializer gsd) {
+        // TODO Auto-generated method stub
+        
+    }
+
+
+    @Override
+    public void saveState(GameStateSerializer gss) {
+        // TODO Auto-generated method stub
+        
     }
 }
